[gd_scene load_steps=6 format=3 uid="uid://n3ypwmqhuqe4"]

[ext_resource type="Script" path="res://entities/abilities/panzer/panzer_shield_component.gd" id="1_wq6ik"]
[ext_resource type="Texture2D" uid="uid://damd3b64suo78" path="res://assets/circle/circle.png" id="2_qppeo"]
[ext_resource type="Texture2D" uid="uid://bas41pi83hg2w" path="res://assets/square/square.png" id="3_2l28j"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_t1yhw"]
blend_mode = 2
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kmxhf"]
blend_mode = 2
light_mode = 1

[node name="PanzerShieldComponent" type="Area2D"]
show_behind_parent = true
collision_layer = 4
collision_mask = 16
monitoring = false
script = ExtResource("1_wq6ik")

[node name="Collision" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PackedVector2Array(32, 0, 32, -4, 28, -16, 20, -24, 16, -28, 4, -32, -4, -32, -16, -28, -20, -24, -28, -16, -32, -4, -32, 0, -24, 0, -24, -4, -20, -12, -12, -20, -4, -24, 4, -24, 12, -20, 20, -12, 24, -4, 24, 0)

[node name="WaitTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 6.0
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true

[node name="Shield" type="Node2D" parent="."]
modulate = Color(0, 0.6, 0.701961, 0.419608)
scale = Vector2(0.25, 0.25)

[node name="OuterCircle" type="Sprite2D" parent="Shield"]
texture = ExtResource("2_qppeo")

[node name="InnerCircle" type="Sprite2D" parent="Shield"]
material = SubResource("CanvasItemMaterial_t1yhw")
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_qppeo")

[node name="HalfSquare" type="Sprite2D" parent="Shield"]
material = SubResource("CanvasItemMaterial_kmxhf")
position = Vector2(3.8147e-06, 64)
scale = Vector2(1, 0.5)
texture = ExtResource("3_2l28j")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
